--- a/client/package.json
+++ b/client/package.json
@@ -2,21 +2,18 @@
   "name": "faction-poll-pvp-client",
   "version": "4.3.10",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.0"
+    "vite": "^5.0.0",
+    "typescript": "^5.0.0"
   }
 }
