--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
   },
+  "engines": { "node": ">=18" },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
