--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
   "engines": { "node": ">=18" },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "typescript": "^5.0.0"
+    "vite": "^5.4.0",
+    "typescript": "^5.4.0"
   }
 }
